first batch of content

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -177,24 +177,22 @@ fieldset[disabled] .btn-xl.active {
 .navbar-default {
     border-color: transparent;
     background-color: #222;
-    font-size: 1em;
 /*    border-color: #666;
     background-color: #eee; */
 }
 
 .navbar-default .navbar-brand {
     /* font-family: "Kaushan Script","Helvetica Neue",Helvetica,Arial,cursive; */
-    /* font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,cursive; */
-    /* color: #{{ site.color.primary }}; */
-    letter-spacing: 1px;
-    font-size: 1em;
+    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,cursive;
+    color: #FFFFFF
+    /* #{{ site.color.primary }}; */
 }
 
 .navbar-default .navbar-brand:hover,
 .navbar-default .navbar-brand:focus,
 .navbar-default .navbar-brand:active,
 .navbar-default .navbar-brand.active {
-    color: #{{ site.color.primary }};
+    color: #{{ site.color.secondary }};
 }
 
 .navbar-default .navbar-collapse {
@@ -252,8 +250,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default .navbar-brand {
-        /* font-size: 2em; */
-        text-transform: uppercase;
+        font-size: 2em;
         -webkit-transition: all .3s;
         -moz-transition: all .3s;
         transition: all .3s;
@@ -270,7 +267,7 @@ fieldset[disabled] .btn-xl.active {
     }
 
     .navbar-default.navbar-shrink .navbar-brand {
-        /* font-size: 1.5em; */
+        font-size: 1.5em;
     }
 }
 
@@ -278,7 +275,8 @@ header {
     text-align: center;
     color: #000;
     background-attachment: scroll;
-    background-image: url(../img/header-bg.jpg);
+    background-image: url(../img/dummpy.png);
+    /* header-bg.jpg */
     background-position: center top;
     background-repeat: none;
     -webkit-background-size: cover;
@@ -292,6 +290,10 @@ header .intro-text {
     padding-bottom: 50px;
 }
 
+header .intro-text#blog {
+    padding-top: 140px;
+    padding-bottom: 10px;
+}
 
 header .intro-text .intro-lead-in {
     margin-bottom: 25px;
@@ -301,14 +303,14 @@ header .intro-text .intro-lead-in {
     line-height: 22px;
 }
 
-/* header .intro-text .intro-heading {
+header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 30px;
+    font-size: 50px;
     font-weight: 700;
     line-height: 50px;
-} */
+}
 
 @media(min-width:768px) {
     header .intro-text {
@@ -431,6 +433,13 @@ ul.collab>li {
 
 }
 
+.collaborator {
+    border-width: 1px;
+    border-style: dotted;
+    margin: 5px;
+    padding: 10px;
+    background-color: #ddd;
+}
 
 .vimeo-wrapper {
   position: relative;
@@ -818,7 +827,7 @@ section#contact .form-control:focus {
     border-color: #{{ site.color.primary }};
     box-shadow: none;
 }
-/*
+
 section#contact::-webkit-input-placeholder {
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -849,7 +858,7 @@ section#contact:-ms-input-placeholder {
 
 section#contact .text-danger {
     color: #e74c3c;
-} */
+}
 
 footer {
     padding: 25px 0;
