--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,7 +2,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-left">
-                    <span class="copyright">Copyright &copy; {{ site.title }} 2019</span>
+                  <a href="http://www.takuvik.ulaval.ca">
+                    <img src="{{ site.baseurl }}/img/takuvik.png" height="70">
+                  </a>
                 </div>
                 <div class="col-md-4 text-center">
                     <ul class="list-inline social-buttons">
@@ -13,9 +15,7 @@
                     </ul>
                 </div>
                 <div class="col-md-4 text-right">
-                        <!-- <a href="http://somelink"> -->
-                          <img src="{{ site.baseurl }}/img/takuvik.png" height="50">
-                        <!-- </a> -->
+                  <span class="copyright">Copyright &copy; {{ site.title }} 2019</span>
                 </div>
             </div>
         </div>
