--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -9,14 +9,15 @@
     {% endif %}
 {% endfor %}
 
-{% if pdf %}
-<a href="{{ site.url }}/papers/{{ filename }}">PDF</a>
-{% endif %}
 {% if entry.doi %}
-&rarr; <a href="http://doi.org/{{ entry.doi }}">online</a>
+<!-- &rarr;  -->
+<a href="http://doi.org/{{ entry.doi }}">[online]</a>
 {% endif %}
-{% if entry.note %}
+{% if pdf %}
+<a href="{{ site.url }}/papers/{{ filename }}">[pdf]</a>
+{% endif %}
+<!-- {% if entry.note %}
 <em>({{ entry.note }})</em>
-{% endif %}
+{% endif %} -->
 <div data-badge-popover="right" data-badge-type="2" data-doi="{{ entry.doi }}"
 data-condensed="true" data-hide-no-mentions="true" class="altmetric-embed"></div>
