--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -275,7 +275,7 @@ header {
     text-align: center;
     color: #000;
     background-attachment: scroll;
-    background-image: url(../img/dummpy.png);
+    background-image: url(../img/sentinel1.png);
     /* header-bg.jpg */
     background-position: center top;
     background-repeat: none;
@@ -307,9 +307,10 @@ header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 50px;
+    font-size: 30px;
     font-weight: 700;
     line-height: 50px;
+    color: #fff
 }
 
 @media(min-width:768px) {
@@ -330,7 +331,7 @@ header .intro-text .intro-heading {
         margin-bottom: 30px;
         text-transform: uppercase;
         font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-        font-size: 75px;
+        font-size: 40px;
         font-weight: 700;
         line-height: 75px;
     }
