--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,8 +2,8 @@
 <header>
     <div class="container">
         <div class="intro-text">
-            <div class="intro-lead-in">Turbulence, data science, and Arctic marine ecosystems</div>
-            <div class="intro-heading">bleh</div>
+            <!-- <div class="intro-lead-in">Turbulence and Arctic marine ecosystems</div> -->
+            <div class="intro-heading">Turbulence and Arctic marine ecosystems</div>
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <ul class="list-inline social-buttons">
