--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -275,7 +275,7 @@ header {
     text-align: center;
     color: #000;
     background-attachment: scroll;
-    background-image: url(../img/sentinel1.png);
+    background-image: url(../img/background.jpg);
     /* header-bg.jpg */
     background-position: center top;
     background-repeat: none;
