--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
 
     {% if page.name == 'index.html' %}
-    <meta property="og:image" content="{{ site.url }}/img/sentinel1.png"/>
+    <meta property="og:image" content="{{ site.url }}/img/background.jpg"/>
     {% endif %}
 
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
