ref format: journal webpage to webpage

--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -14,7 +14,7 @@
 {% endif %}
 {% if entry.doi %}
 <!-- &rarr;  -->
-<a href="http://doi.org/{{ entry.doi }}">[journal webpage]</a>
+<a href="http://doi.org/{{ entry.doi }}">[webpage]</a>
 {% endif %}
 <!-- {% if entry.note %}
 <em>({{ entry.note }})</em>
