--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,4 +23,6 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
     <script type='text/javascript' src='https://d1bxh8uas1mnw7.cloudfront.net/assets/embed.js'></script>
+    <!-- SEO plugin tags -->
+    {% seo %}
 </head>
